--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -12,6 +12,10 @@ body {
   font-family: var(--main-font) !important;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--main-font) !important;
+}
+
 code, kbd, samp, pre {
   font-family: var(--code-font) !important;
 }
