--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -3,10 +3,19 @@
 ---
 @import url('https://fonts.googleapis.com/css2?family=Jua&family=Nanum+Gothic+Coding:wght@400;700&display=swap');
 
-* {
-  font-family: 'Jua', sans-serif !important;
+:root {
+  --main-font: 'Jua', sans-serif;
+  --code-font: 'Nanum Gothic Coding', monospace;
 }
 
-code, kbd, samp, pre, .highlight, .highlight pre {
-  font-family: 'Nanum Gothic Coding', monospace !important;
+body {
+  font-family: var(--main-font) !important;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--main-font) !important;
+}
+
+code, kbd, samp, pre {
+  font-family: var(--code-font) !important;
 }
