--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -28,3 +28,9 @@ div[class*="language-plaintext"] .code-header,
 div[class*="nohl"] .code-header {
     display: none !important;
 }
+
+// 박스 안팎의 하단 여백 정밀 조절
+div[class*="language-plaintext"] pre,
+div[class*="nohl"] pre {
+    padding-bottom: 0.5rem !important; 
+}
