--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -30,7 +30,7 @@ div[class*="nohl"] .code-header {
 }
 
 // 박스 안팎의 하단 여백 정밀 조절
-div[class*="language-plaintext"] pre,
-div[class*="nohl"] pre {
-    padding-bottom: 0.1rem !important; 
+div[class*="language-plaintext"] pre code,
+div[class*="nohl"] pre code{
+    padding-bottom: 0 !important; 
 }
